--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,7 @@
-DB_PASSWORD=
-FLASK_ENV=development
-FLASK_APP=main.py
-DB_URI=
-DB_URI_TEST=s
+
 JWT_SECRET_KEY=
 
 AWS_ACESS_KEY_ID= 1
 AWS_SECRET_ACESS_KEY_ID=
 AWS_S3_BUCKET=
+FLASK_APP="main:create_app()"
